# hermes-feishu-workbench

./: .gitignore  MANIFEST.in  README.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
feishu_workbench_plugin/: __init__.py  lite_tools.py
feishu_workbench_plugin/references/: capabilities.md
feishu_workbench_plugin/skills/feishu-auth-doctor/: SKILL.md
feishu_workbench_plugin/skills/feishu-chatops/: SKILL.md
feishu_workbench_plugin/skills/feishu-office/: SKILL.md
scripts/: smoke_test.py
skills/feishu-auth-doctor/: SKILL.md
skills/feishu-chatops/: SKILL.md
skills/feishu-office/: SKILL.md
